css/style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  line-height: 1.5;
  background-color: rgb(241, 232, 215);
}

.float-right {
  float: right;
  margin-left: 25px;
}

header {
  display: flex;
  flex-direction: row;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  width: 100%;
  height: auto;
  background-image: url(../images/BC3.jpg);
  background-position: center;
  color: blue;
}

header h1 {
  display: inline-block;
  font-size: 48px;
}


nav {
  display: flex;
  flex-basis: 70%;
  justify-content: flex-end;
  padding-top: 5px;
  margin-right: 20px;
  font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 32px;
}

nav ul {
  list-style-type: none;
}

nav ul li {
  display: inline-block;
  margin-left: 25px;
}

a {
  color: navy;
  text-decoration: none;
}

p {
  font-size: 35px;
}

.hero-banner {
  background-image: url(../images/BC1.jpg);
  background-position: center;
  height: 100%;
  width: auto;
  display: flex;
  justify-content: center;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  color: white;
  font-size: 100px;
}

h2 {
  font-size: 50px;
  margin: 0;
}

#about {
  align-items: flex-start;
  clear: both;
  float: right;
  width: 100%;
  height: 100%;
  background-image: url(../images/bc6.jpg);
  background-position: center;
  color: blue;
}

#work {
  color: blue;
}


img {
  border-radius: 4px;
  width: 250px;
}

.background-image {
  background-position: center;
  background-size: cover;
}

.proj1 {
  background-image: url(../images/BC5.jpg);
}

.proj2 {
  background-image: url(../images/BC2.jpg);
}

.proj3 {
  background-image: url(../images/BC4.jpg);
}

.proj4 {
  background-image: url(../images/02-portfolio-4.jpg);
}

.proj5 {
  background-image: url(../images/office.jpg);
}

.flex {
display: flex;
flex-direction: row;
justify-content: center;
flex-wrap: wrap;
}

.flex-item {
  display: flex;
  align-items: flex-end;
  flex-basis: calc(50% - 1em);
  margin: .5em;
  min-height: 150px;
}

.flex-item:first-child {
  min-height: 300px;
  flex-basis: 100%;
}

.contact {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  background-image: url(../images/bc7.jpg);
  font-family:  'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 32px;
  color: blue;
}

@media screen and (max-width: 768px) {
  .flex-item {
    flex-basis: 100%;
  }
  .flex-item:first-child {
    min-height: 150px;
  }
  .contact  {
    flex-direction: column;
  }
}

